--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,13 @@ android {
         versionName "1.0"
     }
     buildTypes {
+
+        debug {
+            buildConfigField "String", "MOVIE_DB_API_KEY", MOVIE_DB_API_KEY
+        }
+
         release {
+            buildConfigField "String", "MOVIE_DB_API_KEY", MOVIE_DB_API_KEY
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
