add movie videos to detail fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "21.1.2"
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.pasha.efebudak.popularmovies"
@@ -11,14 +11,17 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
 
         debug {
-            buildConfigField "String", "MOVIE_DB_API_KEY", MOVIE_DB_API_KEY
+            buildConfigField "String", "MOVIE_DB_API_KEY", MOVIE_DB_API_KEY_DEBUG
+            buildConfigField "String", "BUILD_URL", BUILD_URL_DEBUG
         }
 
         release {
             buildConfigField "String", "MOVIE_DB_API_KEY", MOVIE_DB_API_KEY
+            buildConfigField "String", "BUILD_URL", BUILD_URL_RELESE
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
